[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/central_view/central_view.gd" type="Script" id=1]
[ext_resource path="res://scenes/central_view/asset_grid.gd" type="Script" id=2]
[ext_resource path="res://scenes/central_view/asset_search.tscn" type="PackedScene" id=4]

[node name="CentralView" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AssetSearch" parent="." instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1024.0
margin_bottom = 32.0

[node name="PanelContainer2" type="PanelContainer" parent="."]
margin_top = 36.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_vertical = 3

[node name="AssetGrid" type="ScrollContainer" parent="PanelContainer2"]
margin_left = 5.0
margin_top = 5.0
margin_right = 1019.0
margin_bottom = 559.0
size_flags_horizontal = 9
size_flags_vertical = 3
follow_focus = true
script = ExtResource( 2 )

[node name="AssetGridContainer" type="GridContainer" parent="PanelContainer2/AssetGrid"]
custom_constants/vseparation = 0
custom_constants/hseparation = 0
[connection signal="column_amount_changed" from="PanelContainer2/AssetGrid" to="." method="_on_AssetScrollContainer_column_amount_changed"]
[connection signal="resized" from="PanelContainer2/AssetGrid" to="PanelContainer2/AssetGrid" method="_on_resized"]
[connection signal="textures_requested" from="PanelContainer2/AssetGrid" to="." method="_on_AssetGrid_textures_requested"]
